                Only set open tool dialog path if it exists.
 * src/keybindings.c: Use CTRL-SHIFT-space for Windows show calltips.
 * src/prefs.c: Never show compile & run toolbuttons on Windows and
                hide the prefs option to show them.
 * src/main.c: Disable the Compiler tab instead of hiding it so that
               messages window tabs have the right index on switching.


2006-07-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/encodings.c, src/document.c, src/keyfile.c, src/main.c:
   Save default encoding for new files as charset string.
 * src/filetypes.c: Reordered the filetypes (just a cosmetic change).
 * src/win32.c, src/utils.c:
   Removed title argument from win32_message_dialog because it is
   defined by the dialog type.
   Added simple wrapper function win32_open_browser().
 * src/dialogs.c, src/main.c, src/document.c, src/callbacks.c:
   Removed some unneeded functions to avoid duplicate code.
 * src/callbacks.c:
   Fixed broken Find usage.
   Put "No matches" message also in the message window.
 * Makefile.am, geany_windres.rc, configure.in, src/Makefile.am,
   scintilla/Makefile.am, src/callbacks.c, tagmanager/tm_work_object.c,
   tagmanager/ctags.c, tagmanager/get.c:
   Small changes to get cross compiling using mingw32 suite working.
 * tagmanager/get.c: Applied patch to fix building with gcc 2.95
                     (closes #1528516, thanks).


2006-07-24  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/geany.h, tagmanager/strlist.c, tagmanager/tm_project.c,
   tagmanager/parse.c, tagmanager/general.h, tagmanager/ctags.c,
   tagmanager/tm_workspace.c: Fixed some cross compiling/Win32 issues.
 * geany.glade, src/callbacks.c, src/document.c, src/interface.c,
   src/main.c:
   Added menu item to the document menu to add/remove BOM.
   Replaced switch_notebook_page by ignore_callback flag.
 * src/win32.c, src/dialogs.c:
   Convert Unicode strings to wide characters to avoid weird display.